Compat: getFirst->get(0) dans PlayerPickupItem; maj jars embarqués
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>